Tue Aug 21 13:57:04 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (st_foreach_func, rb_foreach_func): typedefed.

Mon Aug 20 17:25:33 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (mnew): should preserve noex as safe_level.

	* eval.c (rb_call0): tighten security check condition..

Sat Aug 18 21:32:20 2007  Tanaka Akira  <akr@fsij.org>

	* lib/tmpdir.rb (Dir.mktmpdir): new method.
	  [ruby-dev:31462]

Sat Aug 18 17:44:42 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c (Init_tcltklib): use rb_set_end_proc().

Sat Aug 18 15:59:52 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (detach_process_watcher): should not pass the pointer
	  to an auto variable to the thread to be created.  pointed and
	  fix by KUBO Takehiro <kubo at jiubao.org>  [ruby-dev:30618]

Sat Aug 18 12:24:30 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sample/test.rb, test/ruby/test_system.rb(valid_syntax?): keep
	  comment lines first.

Thu Aug 16 20:40:50 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bigtrunc): RBIGNUM(x)->len may be zero.  out of bound
	  access.  [ruby-dev:31404]

Thu Aug 16 16:46:07 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (aix): enable shared by default.

	* configure.in (aix): for 64bit-mode AIX.  [ruby-dev:31401]
	  + use CC for LDSHARED if non-gcc,
	  + moved -G option from *LDFLAGS to LDSHARED,
	  + set -brtl only in XLDFLAGS.

Thu Aug 16 13:06:08 2007  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_lshift): make shift offset long type.
	  (big_rshift): ditto.
	  (rb_big_lshift): ditto.
	  (big_rshift): ditto.
	  [ruby-dev:31434]

Thu Aug 16 04:09:19 2007  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/tuplespace.rb (Rinda::TupleSpace#start_keeper): improve 
	  keeper thread.

Wed Aug 15 13:50:10 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_delete_key): delete the entry without calling block.

	* hash.c (rb_hash_shift): should consider iter_lev too.
